 * src/utils.c: Fixed an issue, which let the build menu item
                insensitive once a new file w/o template was opened.
 * src/document.c: Fixed a segfault in document_find_by_filename().
 * src/geany.h, src/callbacks.c, src/main.c:
   Improved the handling of GIOChannels(for named pipes), ensure they
   are closed in a proper way.


2006-06-10  Enrico Troeger  <enrico.troeger@uvena.de>

 * src/main.c: Made command line options translatable, hide compiler
               message treeview under Win32.
 * src/filetypes.c: Added additional patterns to detect configure
                    scripts as Shell scripts.
 * src/dialogs.c: Made preferences dialog transient for the main window


2006-06-08  Enrico Troeger  <enrico.troeger@uvena.de>

 * src/keybindings.c, src/prefs.c, src/dialogs.c:
   Added labels for each defined shortcut to have a nicer
   representation in the dialogs.
 * geany.desktop.in: Removed duplicate entry for Encoding, now
                     desktop-file-validate processes with no errors.
 * configure.in, doc/geany.1.in:
   Renamed geany.1 to geany.1.in to let it be processed by configure.
   Added GEANY_DATA_DIR to configure.in.
 * doc/Makefile.am, doc/geany.xsl:
   Removed unneeded code for generating geany.1. Added man_MANS to get
   installed the manpage. Changed build command for HTML documentation.
   Added new file doc/geany.xsl.
 * geany.spec.in: Some improvements, corrected download URL.
 * src/prefs.c: Hide make and terminal settings under Windows.


2006-06-07  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/callbacks.c: Fixed segfault when inserting comments and no
                    filetype is set.
 * src/callbacks.c, src/sciwrappers.c, src/sciwrappers.h:
   Use the character position under the mouse click for Go to
   definition/declaration and for overridden middle click text paste.
 * src/utils.c, src/utils.h, src/callbacks.c, src/document.c,
   src/document.h: Fix bug with Go to tag defn/decl when the filename